# Airport-Contracts

./: README.md  erc20.wasm  erc721.wasm
ERC721/contract/src/: error.rs  main.rs
JCT-master/: README.md
JCT-master/JCT01/: Cargo.toml  build.sh
JCT-master/JCT01/src/: constants.rs  main.rs  utils.rs
JCT-master/tests/: Cargo.toml  build.sh
JCT-master/tests/src/: main.rs
JCT-master/tests/wasm/: mint.sh
erc20-master/erc20/src/: entry_points.rs  lib.rs
erc20-master/example/erc20-token/src/: main.rs
erc20-master/testing/erc20-test/src/: main.rs
