[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-execution-engine = "1.5.0"
casper-engine-test-support = {version = "2.1.0", features = ["test-support"]}
casper-types = "1.5.0"